--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,8 @@
+
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
+
+
 * {
   margin: 0;
   padding: 0;
@@ -7,7 +12,7 @@
 }
 
 body {
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-family:'Roboto', sans-serif;
   max-width: 100vw;
   max-height: 100vh;
   overflow: hidden;
@@ -18,12 +23,16 @@ html {
   overflow: auto;
 
 }
+
+h1, h2, h3 {
+  font-family: 'Roboto', sans-serif;
+}
 /* Register */
 .backgroundImage{
   background-image: url(https://images.unsplash.com/photo-1611606063065-ee7946f0787a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2874&q=80);
 }
 
-.unknown{
+.main{
   border-radius: 15px;
 }
 .gradient-custom-3 {
@@ -49,10 +58,22 @@ html {
 
 /* chat */
 
-.background-color{
-  background-color: #3C6255;
+.chat {
+  overflow: auto;
+  background-image: src;
   height: 100vh;
+  background-image: url(https://images.unsplash.com/photo-1611606063065-ee7946f0787a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2874&q=80);
+  background-size: cover;
 
+
+}
+.container{
+    /* display: flex;
+      justify-content: center;
+      align-items: center; */
+      height: 100vh;
+      
+      
 }
 .card{
   border-radius: 15px;
@@ -60,7 +81,7 @@ html {
 
 .scrollbarh{
   position: relative;
-  height: 400px;
+  height: 500px;
  
   overflow: auto;
 
@@ -73,13 +94,11 @@ html {
 
 .messagechat{
   /* style="background-color: #f5f6f7 */
-  background-color: #EAE7B1;
+  background-color: #83BD75;
 
 }
 
-/* .user-message{
-  background-color: #3C6255;
-} */
+
 .avatar2{
   /* style="width: 40px; height: 100%;" */
   width: 40px;
@@ -114,12 +133,8 @@ html {
 }
 
 
-.ewans{
-  background-color: pink;
-}
-
 .selected {
-  background-color: #9a86f3;
+  background-color: #83BD75;
 }
 
 .contact {
@@ -128,15 +143,7 @@ html {
   border-radius: 0.2rem;
 }
 
-/* .welcome{
-  display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    flex-direction: column;
-  
-  
-}; */
+
 
 .pointer{
   cursor: pointer;
@@ -146,3 +153,42 @@ html {
   display: none;
   cursor: pointer;
 }
+
+
+.scrollbarh {
+  overflow-y: scroll;
+  height: 300px;
+}
+
+.scrollbarh::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+.scrollbarh::-webkit-scrollbar-thumb {
+  background-color: #d1d1d1;
+  border-radius: 10px;
+}
+
+.scrollbarh::-webkit-scrollbar-thumb:hover {
+  background-color: #a8a8a8;
+}
+
+
+
+.chat-section {
+  
+
+ 
+  
+  
+}
+
+
+
+/* welcome.js */
+.welcome{
+  padding: 50px 30px;
+
+}
+
