--- a/client/src/App.css
+++ b/client/src/App.css
@@ -30,6 +30,13 @@ h1, h2, h3 {
 /* Register */
 .backgroundImage{
   background-image: url(https://images.unsplash.com/photo-1611606063065-ee7946f0787a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2874&q=80);
+  overflow: auto;
+  height: 100vh;
+  background-size: cover;
+  
+}
+.mask{
+  height: 100vh;
 }
 
 .main{
